baseincludedir = @includedir@/gephex
libdir = @libdir@/gephex
includedir = $(baseincludedir)/renderer

INCLUDES= -I .. -I $(baseincludedir)

noinst_LIBRARIES = librenderer.a
librenderer_a_SOURCES = renderer.cpp  runtimesystem.cpp modulefactory.cpp typefactory.cpp modulefactory.h runtimesystem.h typefactory.h

noinst_HEADERS = renderer.h





