baseincludedir = @includedir@/gephex
libdir = @libdir@/gephex
includedir = $(baseincludedir)/sequencer

INCLUDES= -I.. -I $(baseincludedir)

noinst_LIBRARIES = libsequencer.a
libsequencer_a_SOURCES = sequencer.cpp sequence.cpp sequenceserial.cpp sequencefilesystem.cpp sequencefilesystem.h sequence.h sequenceserial.h

noinst_HEADERS = sequencer.h



